@@ -1,4 +1,5 @@
 Changes since 1.5:
 	- Packets that arrive out of order and have the ACK flag set will be dropped
 	- ARP callback function now handles packets that have not DL10ENMB datalink type
+	- Do not overwrite uid/gid that were set via the command line; from javifs
 	
